--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,15 @@
 /* font */
 body {
-    font-family: "Nunito Sans", Arial, sans-serif
+    font-family: "Nunito Sans", Arial, sans-serif;
+    font-size: 16px;
+}
+h1, h2 {
+    font-family: "Raleway", Helvetica, sans-serif;
+    font-weight: 300;
+}
+h1 {
+    font-size: 3.5rem;
+}
+h2 {
+    font-size: 3.5rem;
 }
