--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,9 @@ h2 {
     max-width: 960px;
     margin-left:auto; 
     margin-right: auto;
+    padding: 1rem; /* root is 16px*/
 }
-p {
+p, dl {
     margin-top: 0;
     margin-bottom: 1rem;
 }
