--- a/css/style.css
+++ b/css/style.css
@@ -37,5 +37,21 @@ p, dl {
 /* nav bar */
 nav {
     position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    color: white;
+    background-color: #2c96bf;
+    padding-top: .5rem;
+    padding-left: .5rem;
+    padding-right: .5rem;
+    padding-bottom: 1rem;
+}
+nav a {
 
+}
+nav li {
+    display: inline;
+    margin: o 1rem
+    padding: 0;
 }
