--- a/css/style.css
+++ b/css/style.css
@@ -97,3 +97,12 @@ dt {
     font-weight: bold;
     margin-top: 1rem;
 }
+
+dd {
+    margin: 0;
+}
+
+#menu img {
+    height: 200px;
+    border-radius: 15px;
+}
